pacstall (1.4-build8)  nitrux; urgency=medium

  * Update pacstall.

 -- Uri Herrera <uri_herrera@nxos.org>  Wed, 23 Jun 2021 21:13:00 -0500

pacstall (1.2-build4)  nitrux; urgency=medium

  * Update package.

 -- Uri Herrera <uri_herrera@nxos.org>  Wed, 26 May 2021 03:41:00 -0500

pacstall (1.2-build3)  nitrux; urgency=medium

  * Update package.

 -- Uri Herrera <uri_herrera@nxos.org>  Wed, 26 May 2021 02:58:00 -0500

pacstall (1.2-build2)  nitrux; urgency=medium

  * Update package.

 -- Uri Herrera <uri_herrera@nxos.org>  Wed, 26 May 2021 00:22:00 -0500

pacstall (1.2-build1)  nitrux; urgency=medium

  * Create package.

 -- Uri Herrera <uri_herrera@nxos.org>  Tue, 25 May 2021 23:14:00 -0500