@@ -4,11 +4,11 @@ Priority: optional
 Maintainer: Uri Herrera <uri_herrera@nxos.org>
 Build-Depends: debhelper (>=9)
 Standards-Version: 3.9.6
-Homepage: http://nxos.org
+Homepage: https://github.com/pacstall/pacstall
 
 
 Package: pacstall
-Architecture: any
+Architecture: all
 Depends: curl, wget, stow, build-essential, unzip, fzf
 Description: The AUR Ubuntu never had.
  Pacstall will attempt to become the AUR Ubuntu wishes it had.
